# tauri-web-todo-app

./: Dockerfile  LICENSE  README.md
backend/: Cargo.toml
backend/src/: main.rs
frontend/: .prettierignore  eslint.config.js  package-lock.json  package.json
frontend/src/: app.html
frontend/src/components/: TaskItem.svelte
frontend/src/lib/: api.ts  globals.d.ts  types.ts
frontend/src/routes/: +page.svelte
frontend/static/: backend.js
frontend/tauri/: Cargo.toml  tauri.conf.json
frontend/tauri/src/: lib.rs
logic/: Cargo.toml
logic/src/: lib.rs
